fixed radius and card alignment

--- a/src/components/ExerciseCard-Style.css
+++ b/src/components/ExerciseCard-Style.css
@@ -39,6 +39,7 @@ body {
 }
 
 .card {
+    border-radius: 0px;
     outline: #6441a5 solid medium;
     position: absolute;
     transition: all 1.4s;
@@ -82,6 +83,7 @@ body {
 }
 
 .overflow {
+    border-radius: 0px;
     padding-left: 20px;
     padding-right: 20px;
 }
