--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,6 @@ html, body {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
-    border-radius: 0px;
 }
 
 .dropdown-label {
